Fix text alignment

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     margin-bottom: 1em;
+    text-align: center;
 }
 
 .resultsHeading {
